<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bite Counter</string>
    <string name="second_page">WallpaperBrowser</string>
    <string name="action_settings">Settings</string>
    <string name="wallpaperBtn">Change Wallpaper</string>
    <string name="BMI">BMI</string>
    <string name="Graph">Graph</string>
    <string name="curved_text_value">In/Out Facility</string>
    <string name="home_screen_observations">OBSERVATIONS</string>
    <string name="total_observations">2375</string>
    <string name="percent_value">65%</string>
    <string name="home_screen_observed_compliance">OBSERVED\nCOMPLIANCE</string>
    <string name="content_description">This is an image…</string>
    <string name="zero">0</string>
    <string name="hprogress">0/7</string>
    <string name="dayremain">Days Remain</string>
    <string name="tutorial">Tutorial</string>
    <string name="title_activity_about_us">AboutUs</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">Bite Counter</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
