<menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_graph"
        android:icon="@drawable/graph"
        android:title="@string/Graph"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_counter"
        android:icon="@drawable/progress"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_tutorial"
        android:icon="@drawable/tutorial"
        android:title="@string/tutorial"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_aboutUs"
        android:icon="@drawable/info_icon"
        android:title="@string/title_activity_about_us"
        app:showAsAction="ifRoom"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>